# OpenGl_GUI_For_OpenRadioss

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.bat  build.sh  imgui.ini  quick_fix.sh  setup_project.sh
examples/: test.rad
include/: radfilereader.h.backup
resources/config/: default_settings.json
shaders/: phong.frag
src/: main.cpp  main.cpp.backup  radfilereader.cpp
src/core/: Application.cpp  Application.h  Element.cpp  Element.h  Material.h  Model.cpp  Model.h  Node.h
src/gui/: GuiManager.cpp  GuiManager.h
src/io/: FileManager.cpp  FileManager.h  RadFileReader.cpp  RadFileReader.h  RadFileWriter.cpp  RadFileWriter.h
src/rendering/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/solver/: SolverInterface.cpp  SolverInterface.h
src/utils/: Logger.cpp  Logger.h  StringUtils.cpp  StringUtils.h
